Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28188

Clang-format settings are global

    XMLWordPrintable

Details

    • feb72dd08 (master)

    Description

      Description

      Hi, there is a windows which allows to choose how clang-format is used. It is in the Preferences -> C++ -> Code Style. There I can select "Current Settings" from the predefined code style profiles drop down. I also can press "Edit" button to change settings, which logically belong to the selected code style profile (item in the dropdown).

      But when I press the "Edit" button and go to "Clang Formatting" tab and change "Formatting Mode", it affects all code style profiles! 

      Expected Behavior

      Clang formatting settings should be individual for each code style profile. Then for each project we can select code style profile. Hence it must be possible to use clang-format for some project and for others not. This is important use-case, because not all projects define .clang-format file, and users may want to work with both kind of projects at the same time.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artem.sokolovskii Artem Sokolovskii
            technic Alex
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes